@@ -1,3 +1,10 @@
+2007-01-09  Darin Adler  <darin@apple.com>
+
+        - fix build on platforms where Unicode::UChar is != uint16_t
+
+        * kjs/string_object.cpp: (KJS::StringProtoFunc::callAsFunction):
+        Change types.
+
 2007-01-09  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
